Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55081

Creating MapPolyline using MapItemView renders the path property of the MapPolyline inaccessible

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.2, 5.7.1
    • 5.6.0
    • None
    • Windows 10 64-bit
      Using Qt 5.7.0
    • I48d6abd8be1b3d9505e37338da2b64812375374c

    Description

      I am using MapItemView to create MapPolylines from a model. Once I have created the polylines I would like to change the path variable however trying to read the path causes a memory access violation.
      The issue also occurs when creating MapPolygons from a model.

      In the attached example I am using a ListModel and once the delegate component is completed the program attempts to read the path and in my environment it crashes.

      Attachments

        For Gerrit Dashboard: QTBUG-55081
        # Subject Branch Project Status CR V

        Activity

          People

            paangele Paolo Angelelli
            mattbrooks7 Matthew Brooks
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes