Fix accessing a MapPolyline delegate before it is handed over to Map

QDeclarativePolylineMapItem::path() currently retrieves a QQmlContext
with contextForObject(parent).
This can return a null context if the parent is null.
This patch changes the parameter to the this pointer, returning the
context for the object itself.

Task-number: QTBUG-55081
Change-Id: I48d6abd8be1b3d9505e37338da2b64812375374c
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>